# lance-code-mcp

./: .gitignore  AGENTS.md  MISTRAL_ARCHITECTURE.md  PLAN.md  README.md  main.py  pyproject.toml
.claude/commands/: prepare.md
adr/: 001-adr-merkle-trees.md
src/lance_code_mcp/: __init__.py  chunker.py  cli.py  config.py  embeddings.py  indexer.py  manifest.py  merkle.py  search.py  server.py  storage.py  watcher.py
src/lance_code_rag/: __init__.py  chunker.py  cli.py  config.py  embeddings.py  indexer.py  manifest.py  merkle.py  search.py  server.py  storage.py  watcher.py
src/lance_code_rag/tui/: __init__.py  app.py  app.tcss  banner.py  init_wizard.py  minimal.py
src/lance_code_rag/tui/assets/: banner.iterm  banner.kitty  banner.sixel
src/lance_code_rag/tui/screens/: __init__.py  selection_screen.py
src/lance_code_rag/tui/widgets/: __init__.py  chat_area.py  inline_selector.py  messages.py  search_input.py  status_bar.py  welcome_box.py
tests/: conftest.py
tests/fixtures/sample_project/: README.md
tests/fixtures/sample_project/js_lib/: index.js  utils.js
tests/fixtures/sample_project/python_app/: __init__.py  auth.py  models.py
tests/fixtures/sample_project/python_app/utils/: helpers.py
tests/integration/: test_cli.py  test_indexing.py  test_merkle.py  test_search.py  test_server.py  test_tui.py  test_wizard.py
