[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lance-code-mcp"
version = "0.1.0"
description = "Semantic code search over local codebases via MCP"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click",
    "rich",
    "pydantic",
    # Phase 2: Indexing pipeline
    "lancedb>=0.15.0",
    "tree-sitter>=0.23.0",
    "tree-sitter-python>=0.23.0",
    "sentence-transformers>=3.0.0",
]

[project.scripts]
lcm = "lance_code_mcp.cli:main"

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
