[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lance-code-rag"
version = "0.1.0"
description = "Semantic code search over local codebases via MCP"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click",
    "rich",
    "pydantic",
    # Phase 2: Indexing pipeline
    "lancedb>=0.15.0",
    "tree-sitter>=0.23.0",
    "tree-sitter-python>=0.23.0",
    "fastembed>=0.4.0",
    "fastmcp>=2.14.1",
    "textual>=6.11.0",
]

[project.scripts]
lcr = "lance_code_rag.cli:main"

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.hatch.build.targets.wheel]
packages = ["src/lance_code_rag"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
